# crypto-trading-system

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_MSG.txt  DEV_LOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  START_HERE.md  alembic.ini  deploy.sh  docker-compose.yml  install.cmd  package-lock.json  pyproject.toml  requirements.txt  start.bat  start.sh  start_dashboard.bat  start_paper_60d.bat  update.sh
.claude/: NEW_SKILLS_DESIGN.md  PRICE_ACTION_DESIGN.md  settings.local.json
.github/: pull_request_template.md
.workbuddy/: overview.md  pre-launch-review.md
alembic/: env.py
data/: paper_daemon_state_live_paper_bollinger.json  paper_daemon_state_live_paper_buyhold.json  paper_daemon_state_live_paper_composite.json  paper_daemon_state_live_paper_donchian.json  paper_daemon_state_live_paper_grid.json  paper_daemon_state_live_paper_ma.json  paper_daemon_state_live_paper_macd.json  paper_daemon_state_live_paper_priceaction.json  paper_daemon_state_live_paper_reversal.json  paper_daemon_state_live_paper_rsi.json  paper_daemon_state_live_paper_structure.json  paper_daemon_state_live_paper_supertrend.json  stop_loss_comparison.json  strategy_configs.json  strategy_evaluation.json
deliverables/: STRATEGY_BATCH_PLAN.md  qa-report-pre-launch.md
digital-heritage-bridge/: digital-heritage-bridge.html
docs/: BINANCE_PROXY_SETUP.md  DEPLOYMENT.md  class-diagram.mermaid  memory-agent-flow.mermaid  sequence-diagram.mermaid  system_design.md
frontend/: .env.local.example  eslint.config.mjs  next.config.mjs  package-lock.json  (+1 more)
(+4448 files in other folders)
